@@ -59,6 +59,7 @@ export(sysreqs_install)
 export(sysreqs_script)
 export(tmpl_list_registered)
 export(tmpl_register)
+export(tmpl_start)
 export(tmpl_start_pkg)
 export(tmpl_start_prj)
 import(devtools)
